
  * debian/lubuntu-default-settings.install:
   - Re-add missing lubuntu-logout.desktop.
  * etc/xdg/lxsession/*/desktop.conf
   - Remove nm-applet to avoid dupplicate on startup.
  * debian/control:
   - Create lubuntu-extra-sessions to isolate experimental sessions.
  * debian/lubuntu-default-settings & debian/lubuntu-extra-sessions
   - Move files of the extra sessions.

 -- Julien Lavergne <gilir@ubuntu.com>  Tue, 18 Feb 2014 22:42:30 +0100

lubuntu-default-settings (0.36) trusty; urgency=low

  * debian/20-* & debian/*.postrm & debian/*.postinst & 
    debian/*default-session.install:
   - Use lightdm conf files to set default session (LP: #1259525).
  * debian/control:
   - Make lightdm requirement to >= 1.9.4 for the conf files mechanism.
  * debian/rules:
   - Correctly use dh_install.
  * debian/lubuntu-default-settings.install:
   - Remove non-existent files.

 -- Julien Lavergne <gilir@ubuntu.com>  Fri, 13 Dec 2013 23:58:50 +0100

lubuntu-default-settings (0.35) trusty; urgency=low

  [ Julien Lavergne ]
  * etc/xdg/lxsession/QLubuntu/
   - Update with new names of LXQt components.
  * usr/share/lubuntu/pcmanfm-qt/
   - Add special configuration for pcmanfm-qt
  * usr/share/lubuntu/qt/Trolltech-qt-session.conf
   - Add new configuration for Qt settings of QLubuntu session.
  * usr/share/xsession
   - Change the name of QLubuntu session file, to match lxsession to launch
     (upstart seems to require this).
  * etc/xdg/lxsession
   - Set disable_autostart=no for all sessions, to keep previous behavior of
     autostarted applications.
  * debian/control:
   - Add policykit-desktop-privileges as a depends with lxsession-logout, to be
     sure to install policykit rules.

  [ Alex Henrie ]
  * usr/share/lxpanel/profile/Lubuntu/panels/panel
    - Replace lubuntu-browser.desktop with lxde-x-www-browser.desktop (LP:
      #1232578)

 -- Julien Lavergne <gilir@ubuntu.com>  Tue, 19 Nov 2013 00:34:05 +0100

lubuntu-default-settings (0.34) saucy; urgency=low
